# Vetty-Backend

./: README.md
deliverease_crypto_api/: .dockerignore  .env.example  .flake8  Dockerfile  START_HERE.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh
deliverease_crypto_api/app/: __init__.py  main.py
deliverease_crypto_api/app/auth/: __init__.py  dependencies.py  jwt_manager.py
deliverease_crypto_api/app/config/: __init__.py  settings.py
deliverease_crypto_api/app/routers/: __init__.py  auth.py  categories.py  coins.py  health.py
deliverease_crypto_api/app/services/: __init__.py  coingecko_service.py  health_service.py
deliverease_crypto_api/app/utils/: __init__.py  http_client.py  logger.py  pagination.py
